#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for each tagged commit on the
project's main git repository: [[https://github.com/captainflasmr/ollama-buddy

* Versions

** <2026-02-16 Sun> *2.5.3*

Autocomplete for inline =@= commands in chat prompt.

*** New Features

- *=@= Autocomplete* -- Typing =@= in the prompt area triggers =completing-read= with available inline commands (=search=, =rag=, etc.). Inserts the chosen syntax template (e.g., =@search()=) with cursor positioned inside the parentheses. Commands are filtered based on loaded modules. Outside the prompt area, =@= inserts literally. Press =C-g= to cancel and insert a literal =@=.
- *=ollama-buddy-at-commands=* -- New customizable alist for defining available =@= commands and their templates, making it easy to add new inline commands.

** <2026-02-16 Sun> *2.5.2*

PDF support for RAG indexing.

*** New Features

- *PDF Indexing* -- RAG can now index PDF files using =pdftotext= (from =poppler-utils=). PDF text extraction is auto-detected at runtime; if =pdftotext= is not installed, PDF files are silently skipped during indexing. PDFs bypass the file size limit since binary size does not reflect extracted text size.

** <2026-02-16 Sun> *2.5.1*

Usability improvements and inline RAG syntax.

*** New Features

- *Inline =@rag(query)= Syntax* -- Use =@rag(query)= in prompts to automatically search and attach RAG context, mirroring =@search()= for web search. Multiple queries supported per prompt. Works across all providers (Ollama, OpenAI, Claude, Gemini, Grok, Copilot, Codestral).
- *Selection Status in Role Menu* -- Role transient menu header now shows current selection info (character count and line count) so you can confirm text is selected before running commands.