@@ -60,8 +60,9 @@ Submit queries, swap models, view token usage and statistics:
 
 * What's New (2.5.3)
 
-- *=@= Autocomplete* -- Typing =@= in the prompt area triggers =completing-read= with available inline commands (=search=, =rag=). Inserts syntax template with cursor inside parens. Filtered by loaded modules; =C-g= inserts literal =@=.
+- *=@= Autocomplete* -- Typing =@= in the prompt area triggers =completing-read= with available inline commands (=search=, =rag=, =file=). Inserts syntax template with cursor inside parens. Filtered by loaded modules; =C-g= inserts literal =@=.
 - *=ollama-buddy-at-commands=* -- Customizable alist for defining =@= command templates, extensible for future inline commands
+- *Inline =@file(path)=* -- Attach files to context inline: =@file(/path/to/file)=. Paths expanded on send; works with =dired-copy-filename-as-kill=.
 
 See [[file:CHANGELOG.org]] for full history.
 
